# storage/api-docs/api-docs.json
@@ -12,6 +12,52 @@
         "http"
     ],
     "paths": {
+        "oauth": {
+            "post": {
+                "tags": [
+                    "Account:Auth"
+                ],
+                "summary": "\u7528\u6237\u8ba4\u8bc1",
+                "description": "\u7528\u6237\u8ba4\u8bc1",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "X-Requested-With",
+                        "in": "header",
+                        "description": "AJAX\u6807\u8bc6 \u9ed8\u8ba4\u4e3a XMLHttpRequest",
+                        "required": true,
+                        "type": "string",
+                        "default": "XMLHttpRequest"
+                    },
+                    {
+                        "name": "email",
+                        "in": "formData",
+                        "description": "\u90ae\u7bb1",
+                        "required": true,
+                        "type": "string",
+                        "default": "csi0n@admin.com"
+                    },
+                    {
+                        "name": "password",
+                        "in": "formData",
+                        "description": "\u5bc6\u7801",
+                        "required": true,
+                        "type": "string",
+                        "default": "123456"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u64cd\u4f5c\u6210\u529f"
+                    },
+                    "500": {
+                        "description": "\u64cd\u4f5c\u5931\u8d25"
+                    }
+                }
+            }
+        },
         "/swagger/my-data": {
             "get": {
                 "tags": [
